fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ body,
   padding: 0;
   height: 100%;
   overflow-x: hidden;
-
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #0d1124;
@@ -396,6 +395,10 @@ li {
     align-items: center;
     margin-left: 10%;
     margin-right: 10%;
+  }
+
+  .content {
+    width: 100%;
   }
 
   .row {
